- Make `RequireAdmin` be a parameter against `Open-ADTSession` and not set via the config.
PSADT's most annoying config option is gone. This is not an overarching setting, it's very much something that's per-deployment so it's now settable where it should be. This also removes the exe's attempt to auto-elevate which could be a poor look for a user to receive a UAC credential request on their screen due to misconfiguration. Intune, etc, will already run stuff with the user's privileged token anyway which should handle the requirement.

--- a/docs/Open-ADTSession.mdx
+++ b/docs/Open-ADTSession.mdx
@@ -16,7 +16,7 @@ Open-ADTSession [[-SessionState] <SessionState>] [[-DeploymentType] <DeploymentT
  [[-DeployMode] <DeployMode>] [-SuppressRebootPassThru] [-TerminalServerMode] [-DisableLogging]
  [[-AppVendor] <String>] [[-AppName] <String>] [[-AppVersion] <String>] [[-AppArch] <String>]
  [[-AppLang] <String>] [[-AppRevision] <String>] [[-AppScriptVersion] <Version>] [[-AppScriptDate] <DateTime>]
- [[-AppScriptAuthor] <String>] [[-InstallName] <String>] [[-InstallTitle] <String>]
+ [[-AppScriptAuthor] <String>] [-RequireAdmin] [[-InstallName] <String>] [[-InstallTitle] <String>]
  [[-DeployAppScriptFriendlyName] <String>] [[-DeployAppScriptVersion] <Version>]
  [[-DeployAppScriptParameters] <System.Collections.Generic.IReadOnlyDictionary`2[System.String,System.Object]>]
  [[-AppSuccessExitCodes] <Int32[]>] [[-AppRebootExitCodes] <Int32[]>]
@@ -283,6 +283,22 @@ Aliases:
 Required: False
 Position: 12
 Default value: [System.Management.Automation.Language.NullString]::Value
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -RequireAdmin
+
+Specifies that this deployment requires administrative permissions.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
